# Scin-Data-Modeling

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EDA.ipynb  EDA_&_Data_Leakage.ipynb  LICENSE  README.md  README_FFNN_COMPARISON.md  README_SEMI_SUPERVISED.md  app.py  evaluate.py  justfile  model.ipynb  pyproject.toml  requirements.txt  run_inference.py  run_training.py  scin_model.py  train.py  xgboost_shap.ipynb  zensical.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml
artifacts/semi_supervised/: semi_supervised_summary.json  unlabeled_pseudo_labels_accepted.csv  unlabeled_pseudo_labels_all.csv
artifacts/semi_supervised_tuning/: summary.csv
artifacts/semi_supervised_tuning/k15_c050_t055_m005/: semi_supervised_metrics.csv  semi_supervised_summary.json  unlabeled_pseudo_labels_accepted.csv  unlabeled_pseudo_labels_all.csv
artifacts/semi_supervised_tuning/k15_c055_t060_m010/: semi_supervised_metrics.csv  unlabeled_pseudo_labels_accepted.csv  unlabeled_pseudo_labels_all.csv
artifacts/semi_supervised_tuning/k20_c055_t055_m005/: semi_supervised_metrics.csv  semi_supervised_summary.json  unlabeled_pseudo_labels_accepted.csv  unlabeled_pseudo_labels_all.csv
artifacts/semi_supervised_tuning/k20_c055_t060_m010/: semi_supervised_metrics.csv  semi_supervised_summary.json  unlabeled_pseudo_labels_accepted.csv  unlabeled_pseudo_labels_all.csv
data/processed/: cleaned.csv  embeddings_validate.npz  manifest.json  test.csv  test_labeled.csv  train.csv  validate.csv
data/raw/: README.md
docs/: api.md  index.md  installation.md  usage.md
modules/: data_retrieval.py  image_processing.py  network_builder.py
notebooks/: EDA.ipynb
results/: metrics_baseline_logreg.json  metrics_ffnn_mlp.json  metrics_lightgbm_model.json  metrics_xgboost_model.json
scin_data_modeling/: __init__.py  cli.py
scin_data_modeling/data/: __init__.py  download.py  embed.py  features.py  preprocess.py  streaming.py
scin_data_modeling/evaluation/: __init__.py  metrics.py
scin_data_modeling/models/: __init__.py  backbone.py  baseline.py  ffnn_model.py  inception_embedding.py  lightgbm_model.py  semi_supervised.py  tune.py  xgboost_model.py
scripts/: run_semi_supervised_models.py
src/: data_pipeline.py  model_architecture.py  scin_dataset_handler.py
tests/: test_inception_embedding.py  test_scin_data_modeling.py
(+16 files in other folders)
