[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scin-data-modeling"
version = "0.1.0"
description = "Python Boilerplate contains all the boilerplate you need to create a Python package."
readme = "README.md"
authors = [
  {name = "Wild Guevara", email = "wild.guevara@mail.mcgill.ca"}
]
maintainers = [
  {name = "Wild Guevara", email = "wild.guevara@mail.mcgill.ca"}
]
classifiers = [
    "Typing :: Typed",
    # TODO: Add additional classifiers as needed
]
license = {text = "MIT"}
dependencies = [
  "typer",
  "rich",
  "tqdm>=4.67.3",
  "google-cloud-storage>=3.9.0",
  "torch>=2.10.0",
  "torchvision>=0.25.0",
  "pillow>=12.1.1",
  "pandas>=3.0.1",
  "numpy>=2.4.2",
  "scikit-learn>=1.8.0",
]
requires-python = ">= 3.12"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "typecheck" },
]
lint = [
    "ruff",
]
test = [
    "coverage",
    "pytest",
]
typecheck = [
    "ty",
]
docs = [
    "zensical",
    "mkdocstrings-python",
]

[project.urls]
bugs = "https://github.com/wildg/scin_data_modeling/issues"
changelog = "https://github.com/wildg/scin_data_modeling/releases"
documentation = "https://wildg.github.io/scin_data_modeling/"
homepage = "https://github.com/wildg/scin_data_modeling"

[project.scripts]
scin_data_modeling = "scin_data_modeling.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.coverage.run]
branch = true
parallel = true
source = ["src/", "tests/"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 50
exclude_also = [
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@overload",
    "@typing.overload",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.uv]
package = true
default-groups = ["dev"]
